syntax = "proto3";

import "Messages/test_proto3_optional.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "Validation.Mediator";

package Validator;

message EmailValidationRequest {
  string Email = 1;
}

message EmailValidationReply {
    StringValidationResult Email = 1;
}